# nginx-auth-totp

./: .gitignore  Cargo.toml  README.md
src/: cookie_store.rs  http_server.rs  main.rs  router.rs  system.rs  totp.rs
src/auth_handler/: handler_info.rs  handler_login.rs  mod.rs  urls.rs
src/request_handler/: handler_login.rs  mod.rs  views.rs
test/: nginx.sh  oathtool.sh
test/etc/: nginx.conf
test/www/: index.html  other_page.html
