[package]
name = "nginx_auth_totp"
version = "0.1.0"
authors = ["Yves Fischer <yvesf+git@xapek.org>"]

[dependencies]
ascii = "0.7"
time = "0.1"
getopts = "0.2"
simple_logger = "0.4"
log = "0.3"
oath = "0.10.*"
evmap = "4.0.*"
horrorshow = "0.6.*"
random = "0.12.*"
tokio = "0.1.*"
tokio-threadpool = "0.1.*"
tokio-executor = "0.1.*"
http = "0.1.*"
bytes = "0.4.*"
httparse = "1.3.*"
thread_local = "0.3.*"
cookie = "0.11.*"
url = "1.7.*"